# MCA

./: .gitignore  CMakeLists.txt  README.md
cfg/Boxer-IrishMan-Gladiator2/: Boxer-IrishMan-Gladiator2_dec.cfg  Boxer-IrishMan-Gladiator2_enc.cfg
cfg/Boys2/: Boys2_dec.cfg  Boys2_enc.cfg
cfg/Fujita2/: Fujita2_dec.cfg  Fujita2_enc.cfg
cfg/HandTools/: HandTools_dec.cfg  HandTools_enc.cfg
cfg/Matryoshka/: Matryoshka_dec.cfg  Matryoshka_enc.cfg
cfg/MiniGarden2/: MiniGarden2_dec.cfg  MiniGarden2_enc.cfg
cfg/Motherboard2/: Motherboard2_dec.cfg  Motherboard2_enc.cfg
cfg/Origami/: Origami_dec.cfg  Origami_enc.cfg
cfg/TempleBoatGiantR32/: TempleBoatGiantR32_dec.cfg  TempleBoatGiantR32_enc.cfg
include/: mca.hpp
include/mca/common/cv/: Mat.hpp  Point.hpp  Rect.hpp  cv2.hpp  yuv420.hpp
include/mca/common/layout/: MI.hpp  RaytrixLayout.hpp  TSPCLayout.hpp  layout.hpp
include/mca/common/pipeline/: module.hpp
include/mca/io/parser/: argparser.hpp  calib.hpp  config.hpp  parser.hpp
include/mca/module/: pipeline.hpp
include/mca/module/common/: ConfigLoader.hpp  Estimation.hpp  Localization.hpp  Relocalization.hpp  YUV420Writer.hpp
include/mca/module/decoder/: MetaDataLoader.hpp  Optimize.hpp  YUV420Loader.hpp
include/mca/module/encoder/: Fitting.hpp  MCAModule.hpp  MetaDataWriter.hpp  YUV420Loader.hpp
include/mca/pred/: block.hpp  intra.hpp  prediction.hpp
include/mca/pred/inter/: Block.hpp
include/mca/proc/: crop.hpp  frame.hpp  log.hpp  padding.hpp  postproc.hpp  preproc.hpp  raytrix.hpp  tspc.hpp
include/mca/utils/: math.hpp
src/: main.cpp  patchsize.txt  post.sh  pre.sh  shell.sh
